--- a/style.css
+++ b/style.css
@@ -599,3 +599,65 @@ a{
     border-radius: 50%;
     margin-right: 15px;
 }
+
+
+/* PROFILE PAGE STYLE */
+
+/* MAIN CONTAINER */
+.profile-main{
+    flex-basis: 73%;
+}
+
+.profile-sidebar{
+    flex-basis: 25%;
+    align-self: flex-start;
+    position: sticky;
+    top: 73%;
+}
+
+.profile-container{
+    background: #fff;
+}
+
+.profile-container-inner{
+    padding: 0 4% 10px;
+}
+
+.profile-pic{
+    width: 200px;
+    margin-top: -100px;
+    border-radius: 50%;
+    padding: 5px;
+    background: #fff;
+}
+
+.profile-container-inner h1{
+    font-size: 28px;
+    font-weight: 600;
+    color: #222;
+}
+
+.profile-container-inner b{
+    font-weight: 500;
+}
+
+.profile-container-inner p{
+    margin-top: 5px;
+}
+
+.profile-container-inner p a{
+    color: #045be6;
+    font-weight: 500;
+}
+
+.mutual-connection{
+    display: flex;
+    align-items: center;
+    margin: 20px 0;
+}
+
+.mutual-connection img{
+    width: 30px;
+    border-radius: 50%;
+    margin-right: 5px;
+}
