--- a/style.css
+++ b/style.css
@@ -612,7 +612,7 @@ a{
     flex-basis: 25%;
     align-self: flex-start;
     position: sticky;
-    top: 73%;
+    top: 73px;
 }
 
 .profile-container{
@@ -775,4 +775,68 @@ a{
     background: #e4e6eb;
     font-size: 12px;
     font-weight: 500;
+}
+
+/* PROFILE SIDEBAR */
+.profile-sidebar .sidebar-ad{
+    margin-top: 0;
+}
+
+.sidebar-people{
+    background: #fff;
+    padding: 15px 25px;
+    margin: 12px 0;
+    font-size: 12px;
+}
+
+.sidebar-people hr{
+    outline: none;
+    background: #999;
+    border: 0;
+    border-bottom: 1px solid ;
+}
+
+.sidebar-people h2{
+    font-weight: 600;
+    margin: 10px 0 20px;
+}
+
+.sidebar-people-row{
+    display: flex;
+    align-items: flex-start;
+    margin: 6px 0;
+}
+
+.sidebar-people-row img{
+    width: 40px;
+    border-radius: 50%;
+    margin-right: 8px;
+    margin-top: 5px;
+}
+
+.sidebar-people-row h2{
+    font-weight: 500;
+    font-size: 15px;
+}
+
+.sidebar-people-row a{
+    display: inline-block;
+    margin: 10px 0;
+    padding: 5px 25px;
+    border: 1px solid #5f5f5f;
+    border-radius: 30px;
+    font-weight: 500;
+}
+
+.profile-footer{
+    padding: 0 6% 30px;
+}
+
+.profile-footer .sidebar-useful-links{
+    text-align: left;
+    padding: 0;
+}
+
+.profile-footer .copyright-msg{
+    justify-content: flex-start;
 }
